<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileVM" type="com.mohamedslahsapplication.app.modules.profile.data.viewmodel.ProfileVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="@dimen/_25pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <ImageView android:id="@+id/imageCamera"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_134pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="@dimen/_136pxh"
            android:scaleType="fitXY" android:src="@drawable/img_camera"
            tools:ignore="ContentDescription" tools:src="@drawable/img_camera"/>
        <TextView android:ellipsize="end" android:id="@+id/txtUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileVM.profileModel.txtUsername}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_username"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_your_username"
            android:id="@+id/etGroupThirtyThree"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={profileVM.profileModel.etGroupThirtyThreeValue}"
            android:textColorHint="@color/green_A200"
            style="@style/etRobotoregular14_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFirstName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileVM.profileModel.txtFirstName}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_first_name"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_your_name"
            android:id="@+id/etGroupThirtyFive" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={profileVM.profileModel.etGroupThirtyFiveValue}"
            android:textColorHint="@color/green_A200"
            style="@style/etRobotoregular14_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLastName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileVM.profileModel.txtLastName}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_last_name"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_your_last_name"
            android:id="@+id/etGroupThirtySeven"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={profileVM.profileModel.etGroupThirtySevenValue}"
            android:textColorHint="@color/green_A200"
            style="@style/etRobotoregular14_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDateofBirth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileVM.profileModel.txtDateofBirth}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_date_of_birth"/>
        <EditText android:ellipsize="end"
            android:hint="@string/msg_your_birthday"
            android:id="@+id/etGroupThirtyNine" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={profileVM.profileModel.etGroupThirtyNineValue}"
            android:textColorHint="@color/green_A200"
            style="@style/etRobotoregular14_1" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearCompletebutton"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_94pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_79pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_2">
            <TextView android:ellipsize="end"
                android:id="@+id/txtComplete"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25pxv"
                android:layout_marginStart="@dimen/_111pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_weight="0.79" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtComplete}"
                style="@style/txtRobotoregular16_3" tools:text="@string/lbl_complete"/>
            <ImageView android:id="@+id/imageCheckmark"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginBottom="@dimen/_30pxv"
                android:layout_marginEnd="@dimen/_111pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="@dimen/_18pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_checkmark_gray_401"
                tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark_gray_401"/>
        </LinearLayout>
    </LinearLayout>
</layout>
