<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="otpVM" type="com.mohamedslahsapplication.app.modules.otp.data.viewmodel.OtpVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearOTP" android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageOtpvector"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_258pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="@dimen/_257pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_otpvector"
            tools:ignore="ContentDescription" tools:src="@drawable/img_otpvector"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOTPVerificatio"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{otpVM.otpModel.txtOTPVerificatio}"
            style="@style/txtHelveticabold24" tools:text="@string/msg_otp_verificatio"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtWewillsendto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@{otpVM.otpModel.txtWewillsendto}"
            style="@style/txtHelvetica16" tools:text="@string/msg_we_will_send_to"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEnterMobileNu"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{otpVM.otpModel.txtEnterMobileNu}"
            style="@style/txtSFProDisplayregular14" tools:text="@string/msg_enter_mobile_nu"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txt2015550124"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{otpVM.otpModel.txt2015550124}"
            style="@style/txtSFUIDisplaybold18" tools:text="@string/lbl_201_555_0124"/>
        <View android:background="@color/green_A200"
            android:id="@+id/lineLineOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_6pxv" android:layout_width="@dimen/_315pxh"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnGetOtp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_26pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_26pxv" android:singleLine="true"
            android:text="@string/lbl_get_otp"
            android:textAllCaps="false"
            style="@style/btnGradientRounded" tools:text="@string/lbl_get_otp"/>
    </LinearLayout>
</layout>
