<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileTypingVM" type="com.mohamedslahsapplication.app.modules.profiletyping.data.viewmodel.ProfileTypingVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearProfileTypin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="@dimen/_25pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <ImageView android:id="@+id/imageCamera"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_134pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="@dimen/_136pxh"
            android:scaleType="fitXY" android:src="@drawable/img_camera"
            tools:ignore="ContentDescription" tools:src="@drawable/img_camera"/>
        <TextView android:ellipsize="end" android:id="@+id/txtUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileTypingVM.profileTypingModel.txtUsername}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_username"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_mattyice"
            android:id="@+id/etGroupFortyOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={profileTypingVM.profileTypingModel.etGroupFortyOneValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etRobotoregular14" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFirstName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileTypingVM.profileTypingModel.txtFirstName}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_first_name"/>
        <FrameLayout android:id="@+id/frameStackgroupfortythree"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_26pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_14pxv" android:layout_width="@dimen/_315pxh">
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_shaw"
                android:id="@+id/etGroupFortyThree"
                android:inputType="text" android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:singleLine="true"
                android:text="@={profileTypingVM.profileTypingModel.etGroupFortyThreeValue}"
                android:textColorHint="@color/white_A700"
                style="@style/etRobotoregular14" tools:ignore="Autofill"/>
            <View android:background="@color/teal_A200"
                android:id="@+id/lineLineFive"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_19pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh" android:layout_width="@dimen/_1pxh"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtLastName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{profileTypingVM.profileTypingModel.txtLastName}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_last_name"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_your_last_name"
            android:id="@+id/etGroupFortyFive" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={profileTypingVM.profileTypingModel.etGroupFortyFiveValue}"
            android:textColorHint="@color/green_A200"
            style="@style/etRobotoregular14_1" tools:ignore="Autofill"/>
        <FrameLayout android:id="@+id/frameStackdateofbirth"
            android:layout_height="@dimen/_302pxv"
            android:layout_marginTop="@dimen/_22pxv" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearEmailAddress"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDateofBirth"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{profileTypingVM.profileTypingModel.txtDateofBirth}"
                    style="@style/txtRobotoregular14" tools:text="@string/lbl_date_of_birth"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_your_birthday"
                    android:id="@+id/etGroupFortySeven"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:singleLine="true"
                    android:text="@={profileTypingVM.profileTypingModel.etGroupFortySevenValue}"
                    android:textColorHint="@color/green_A200"
                    style="@style/etRobotoregular14_1" tools:ignore="Autofill"/>
            </LinearLayout>
            <View android:id="@+id/viewAlphabeticOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_291pxv"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_375pxh"/>
        </FrameLayout>
    </LinearLayout>
</layout>
