<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="otpTwoVM" type="com.mohamedslahsapplication.app.modules.otptwo.data.viewmodel.OtpTwoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearOTPTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageOtpvector"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_258pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="@dimen/_257pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_otpvector_1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_otpvector_1"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOTPVerificatio"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{otpTwoVM.otpTwoModel.txtOTPVerificatio}"
            style="@style/txtHelveticabold24" tools:text="@string/msg_otp_verificatio"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtWewillsendto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@{otpTwoVM.otpTwoModel.txtWewillsendto}"
            style="@style/txtHelvetica16" tools:text="@string/msg_we_will_send_to"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEnterMobileNu"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{otpTwoVM.otpTwoModel.txtEnterMobileNu}"
            style="@style/txtSFProDisplayregular14" tools:text="@string/msg_enter_mobile_nu"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowseven"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnseven"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.27" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSeven"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{otpTwoVM.otpTwoModel.txtSeven}"
                    style="@style/txtSFUIDisplaymedium24" tools:text="@string/lbl_7"/>
                <View android:background="@color/green_A200"
                    android:id="@+id/lineLineOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_48pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnthree"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.27" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtThree"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{otpTwoVM.otpTwoModel.txtThree}"
                    style="@style/txtSFUIDisplaymedium24" tools:text="@string/lbl_3"/>
                <View android:background="@color/green_A200"
                    android:id="@+id/lineLineOneOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_48pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnzero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.27" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtZero"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{otpTwoVM.otpTwoModel.txtZero}"
                    style="@style/txtSFUIDisplaymedium24" tools:text="@string/lbl_0"/>
                <View android:background="@color/green_A200"
                    android:id="@+id/lineLineOneTwo"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_48pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumneight"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.18" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEight"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{otpTwoVM.otpTwoModel.txtEight}"
                    style="@style/txtSFUIDisplaymedium24" tools:text="@string/lbl_8"/>
                <View android:background="@color/green_A200"
                    android:id="@+id/lineLineOneThree"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_48pxh"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtDidntyourece"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{otpTwoVM.otpTwoModel.txtDidntyourece}"
            style="@style/txtSFProDisplayregular14" tools:text="@string/msg_didn_t_you_rece"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerify"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_26pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_26pxv" android:singleLine="true"
            android:text="@string/lbl_verify"
            android:textAllCaps="false"
            style="@style/btnGradientRounded" tools:text="@string/lbl_verify"/>
    </LinearLayout>
</layout>
